# time-bandits

./: .gitignore  .hlint.yaml  README.md  SPEC.md  STATUS.md  cabal.project  concurrency.md  flake.nix  integration-status.md  justfile  package.yaml  pr-commit-message.md  pr-description.md  refactor.md  run-test-report.sh  shell.nix  standalone_effect_test.hs  system_contract.md  test-deps.nix  test_report_current.md  time-bandits.cabal  toeffect-example.hs  toeffect-pr-summary.md
.reporter-backup/: TastyReporter.hs.bak  TestReport.hs.bak
actors/: README.md
adapters/: README.md
app/: ContentAddressableTool.hs  FactObservationCLI.hs  Main.hs  TEL_REPL.hs
cli/: README.md
conversion_report/: test_conversion_report.txt
core/: README.md
docs/: SPEC.md  adr_001_design_invocation.md  adr_002_time.md  adr_003_effect_adapter_generation.md  adr_004_geo_distributed.md  adr_005_concurrency.md  adr_006_resource_ownership.md  adr_007_fact_management.md  adr_008_unified_log.md  adr_009_simulation_system.md  adr_010_schema_evolution.md  adr_011_content_addressed_code.md  adr_012_timekeeper_indexing_and_log_reconstruction.md  adr_013_content_addressed_code.md  adr_013_temporal_effect_language.md  adr_014_network_adapter.md  adr_015_blockchain_adapter.md  adr_016_content-addressable-execution-adr.md  adr_017_ast_resource_graph.md  adr_018_resource_formalization.md  adr_019_compiler.md  adr_020_deployer.md  adr_021_observer.md  adr_022_zk_registers.md  adr_effect_adapter_generation.md  architectural_overview.md  architecture_diagram.md  celestia_adapter_plan.md  cleanup_summary.md  code_reorg_documentation.md  codebase_overview.md  concept_001_map_of_time_vs_unified_log.md  concept_002_fact-observation.md  concept_002_fact_observation.md  concept_003_p2p.md  concept_004_time_dual.md  concept_005_categorical_duality.md  design_concurrency.md  design_geo_distributed.md  design_invocation.md  (+24 more)
examples/: README.md  causal_ordering_scenario.toml  simple_scenario.toml
execution/: README.md
facts/: PriceObservation-passing-rule-20250310165053.json  PriceObservation-passing-rule-20250310165240.json  PriceObservation-passing-rule-20250310165942.json  PriceObservation-passing-rule-20250310170212.json  PriceObservation-passing-rule-20250310170302.json  PriceObservation-passing-rule-20250310171121.json  PriceObservation-passing-rule-20250310171158.json  PriceObservation-passing-rule-20250310171917.json  PriceObservation-passing-rule-20250310171934.json  PriceObservation-passing-rule-20250310172556.json  PriceObservation-passing-rule-20250310173013.json  PriceObservation-passing-rule-20250310173105.json  PriceObservation-passing-rule-20250310174002.json  PriceObservation-passing-rule-20250310174217.json  PriceObservation-passing-rule-20250310174554.json  PriceObservation-passing-rule-20250310174704.json  PriceObservation-passing-rule-20250310175250.json  PriceObservation-passing-rule-20250310175428.json  PriceObservation-passing-rule-20250310175529.json  PriceObservation-passing-rule-20250310175603.json  PriceObservation-passing-rule-20250310180033.json  PriceObservation-passing-rule.json  PriceObservation-test-rule-20250310164739.json  PriceObservation-test-rule-20250310164922.json  PriceObservation-test-rule-20250310165002.json  PriceObservation-test-rule-20250310165053.json  PriceObservation-test-rule-20250310165240.json  PriceObservation-test-rule-20250310165942.json  PriceObservation-test-rule-20250310170212.json  PriceObservation-test-rule-20250310170302.json  PriceObservation-test-rule-20250310171121.json  PriceObservation-test-rule-20250310171158.json  PriceObservation-test-rule-20250310171917.json  PriceObservation-test-rule-20250310171934.json  PriceObservation-test-rule-20250310172556.json  PriceObservation-test-rule-20250310173013.json  PriceObservation-test-rule-20250310173105.json  PriceObservation-test-rule-20250310174002.json  PriceObservation-test-rule-20250310174217.json  PriceObservation-test-rule-20250310174554.json  (+7 more)
fixtures/: README.md
implementation/: TEL-implementation-plan.md  implementation_001_tel_effect.md  implementation_002_restructure_after_tel.md  implementation_content_addressable_execution.md  implementation_restructure_after_tel.md  implementation_summary_schema_evolution_tecl.md  refactor_004_resource.md  refactor_006_test_core_system.md  work summary_tel_effect_system.md  work_summary_fix_operator_pattern_matching_and_hash_type_conversions.md  work_summary_tel_integration.md
nix/: generate-test-report.nix
programs/: README.md
proofs/: README.md
refactor/: refactor_001_test_organization.md  refactor_002_separation.md  refactor_003_rewire.md  refactor_005_tecl_prep.md  refactor_006_test_core_system.md  refactor_008_e2e_implementation.md  refactor_010_content_addressable_code.md  refactor_011_network_adapter_plan.md  refactor_module_cleanup.md  refactor_resource.md  refactor_rewire.md  refactor_separation.md  refactor_test_organization.md  refactor_to_implement.md
scenarios/: simple_transfer.toml
scripts/: run-test-report.sh  run_in_memory_simulation.sh  run_local_multi_process.sh  run_template_haskell_test.sh  run_tests.sh  run_th_test.sh  test-quic.hs  test_template_haskell.hs
src/: Actors.hs  Adapters.hs  CLI.hs  Core.hs  Execution.hs  Programs.hs  Proofs.hs  Simulation.hs  TimeBandits.hs
test/: AccountProgramSpec.hs  BasicFunctionalitySpec.hs  ConcurrentEffectsSpec.hs  ControllerTest.hs  CrossChainScenarioSpec.hs  DeploymentTest.hs  DistributedLogTest.hs  EffectReplayabilitySpec.hs  GenerateMinimalReport.hs  GenerateTestReport.hs  Helpers.hs  HspecReporter.hs  Main.hs  Spec.hs  (+26 more)
test-report-out/: current_report.md  latest_report.md  test_report_current.md
test/standalone/cli-deployment/: Main.hs  cabal.project  cli-deployment.cabal
test/standalone/cli-deployment/CLI/: Deployment.hs
test/standalone/fact-observation/: fact-observation.cabal
test/standalone/fact-observation/app/: FactObservation.hs  Main.hs
test/standalone/time-map/: README.md  time-map.cabal
test/standalone/time-map/app/: Main.hs  TimeMap.hs  Timeline.hs  Types.hs
(+359 files in other folders)
