cabal-version:      2.4
name:               time-bandits
version:            0.1.0.0
license:            Apache-2.0
copyright:          2025 Sam Hart
author:             Sam Hart
maintainer:         sam@hxrts.com
category:           Development
synopsis:           Distributed time travel
description:
  A Haskell library for distributed time travel.

extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/timewave-computer/time-bandits.git

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base               >=4.18    && <5
    , bytestring
    , cborg              >=0.2
    , cereal
    , containers
    , crypto-api
    , cryptohash-sha256
    , cryptonite
    , data-default
    , directory
    , filepath
    , hashable
    , memory
    , mtl
    , optics-core
    , polysemy           ==1.9.2.0
    , polysemy-log       ==0.9.0.0
    , polysemy-plugin    ==0.4.5.0
    , process            >=1.6.0.0
    , profunctors
    , relude             >=1.0
    , serialise          >=0.2
    , text
    , time
    , transformers
    , with-utf8
    , base64-bytestring
    , binary
    , haskeline          >= 0.8.2
    , entropy
    , mtl
    , network             >= 3.1.2
    , random              >= 1.2
    , stm
    , vector
    , http-client

  default-language:   GHC2021

-- Main library that contains all modules
library
  import:          shared
  hs-source-dirs:  src
  
  -- All modules explicitly listed by directory structure
  exposed-modules:
    TimeBandits
    
    -- Types directory (shared types)
    Types.EffectTypes
    Types.EffectPayload
    Types.Effect
    Types.Guard
    Types.Actor
    Types.Deployment
    Types.Scenario
    Types.Core
    
    -- Actors directory
    Actors
    Actors.Actor
    Actors.ActorCommunication
    Actors.ActorTypes
    Actors.ActorCoordination
    Actors.TimeBandit
    Actors.TimeKeeper
    Actors.TimeTraveler
    Actors.TransitionMessage
    
    -- Adapters directory
    Adapters
    Adapters.CelestiaAdapter
    Adapters.EthereumAdapter
    Adapters.MockAdapter
    Adapters.Network
    Adapters.NetworkAdapter
    Adapters.NetworkQUIC
    Adapters.TimelineAdapter
    
    -- CLI directory
    CLI
    CLI.Controller
    CLI.Deployment
    CLI.Main
    
    -- Core directory
    Core
    Core.AccountProgram
    Core.ActorId
    Core.Common
    Core.Core
    Core.Effect
    Core.Effects
    Core.Error
    Core.ExecutionLog
    Core.ProgramId
    Core.Resource
    Core.ResourceId
    Core.ResourceLedger
    Core.Serialize
    Core.TimelineDescriptor
    Core.TimelineId
    Core.Timeline
    Core.TimeMap
    Core.Types
    Core.Utils
    
    -- Execution directory
    Execution
    Execution.DistributedLog
    Execution.EffectAdapterGenerator
    Execution.EffectExecutor
    Execution.EffectInterpreter
    Execution.EffectLogger
    Execution.Events
    Execution.ExecutionLog
    Execution.LocalMultiProcess
    Execution.LogStore
    Execution.PreconditionEvaluator
    Execution.ResourceLedger
    
    -- Programs directory
    Programs
    Programs.AccountProgram
    Programs.Preconditions
    Programs.Program
    Programs.ProgramDefinition
    Programs.ProgramEffect
    Programs.ProgramState
    Programs.ProgramTypes
    Programs.Scenario
    Programs.Types
    
    -- Proofs directory
    Proofs
    Proofs.SecurityVerifier
    Proofs.TimelineProof
    Proofs.ZKProof
    
    -- Simulation directory
    Simulation
    Simulation.Controller
    Simulation.Messaging
    Simulation.Scenario
    Simulation.Scenarios

executable time-bandits
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , bytestring
    , text
    , time-bandits
    , utf8-string

test-suite time-bandits-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    SimpleNetworkConfig
                   , TimelineScenarioTest
                   , ControllerTest
                   , TimelineDescriptorTest
                   , DistributedLogTest
  build-depends:    base >= 4.16 && < 5,
                   time-bandits,
                   polysemy,
                   polysemy-plugin,
                   tasty,
                   tasty-hunit,
                   random,
                   bytestring,
                   containers,
                   time,
                   network
