cabal-version:      2.4
name:               time-bandits
version:            0.1.0.0
license:            Apache-2.0
copyright:          2025 Sam Hart
author:             Sam Hart
maintainer:         sam@hxrts.com
category:           Development
synopsis:           Distributed time travel
description:
  A Haskell library for distributed time travel.

extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/timewave-computer/time-bandits.git

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    -- , aeson-schema  -- Commented out due to dependency issues with regex-pcre and duplicate instances
    , async
    , base               >=4.18    && <5
    , base16-bytestring
    , bytestring
    , cborg              >=0.2
    , cereal
    , containers
    , crypto-api
    , cryptohash-sha256
    , cryptonite
    , data-default
    , directory
    , extra
    , filepath
    , hashable
    , memory
    , mtl
    , optics-core
    , polysemy           ==1.9.2.0
    , polysemy-log       ==0.9.0.0
    , polysemy-plugin    ==0.4.5.0
    , process            >=1.6.0.0
    , profunctors
    , relude             >=1.0
    , serialise          >=0.2
    , text
    , time
    , tomland
    , transformers
    , with-utf8
    , base64-bytestring
    , binary
    , haskeline          >= 0.8.2
    , entropy
    , mtl
    , network             >= 3.1.2
    , random              >= 1.2
    , stm
    , vector
    , http-client
    , tomland
    , aeson-pretty
    , x509
    , zlib
    , uuid
    , asn1-types
    , raw-strings-qq
    , deepseq

  default-language:   GHC2021

-- Main library that contains all modules
library
  import:          shared
  hs-source-dirs:  src
  
  -- All modules explicitly listed by directory structure
  exposed-modules:
    TimeBandits
    
    -- Types directory (shared types)
    Types.EffectTypes
    Types.EffectPayload
    Types.Effect
    Types.Guard
    Types.Actor
    Types.Deployment
    Types.Scenario
    Types.Core
    Types.Network
    Types.EffectBase
    
    -- Actors directory
    Actors
    Actors.Actor
    Actors.ActorCommunication
    Actors.ActorTypes
    Actors.ActorCoordination
    Actors.TimeBandit
    Actors.TimeKeeper
    Actors.TimeTraveler
    Actors.TransitionMessage
    
    -- Adapters directory
    Adapters
    Adapters.CelestiaAdapter
    Adapters.EthereumAdapter
    Adapters.MockAdapter
    Adapters.Network
    Adapters.NetworkAdapter
    Adapters.NetworkQUIC
    Adapters.TimelineAdapter
    Adapters.Network.Protocol
    Adapters.Network.Serialization
    Adapters.Network.Discovery
    Adapters.Network.TLS.Certificate
    
    -- CLI directory
    CLI
    CLI.Controller
    CLI.Deployment
    CLI.Main
    
    -- Core directory
    Core
    Core.AccountProgram
    Core.ActorId
    Core.CodeAddress
    Core.CodeAddressUtil
    Core.Common
    Core.Core
    Core.Effect
    Core.Effects
    Core.Error
    Core.ExecutionLog
    Core.ProgramId
    Core.Resource
    Core.ResourceId
    Core.ResourceLedger
    Core.Serialize
    Core.SerializeInstances
    Core.TimelineDescriptor
    Core.TimelineId
    Core.Timeline
    Core.TimeMap
    Core.Types
    Core.Utils
    Core.Concurrency.LockManager
    Core.Concurrency.ResourceLock
    Core.Concurrency.EffectLog
    Core.Concurrency.Distributed
    Core.Concurrency.Combinators
    Core.TECL.Concurrency
    Core.TECL
    Core.FactObservation.Rules
    Core.FactObservation.Schema
    Core.FactObservation.TOMLParser
    Core.FactObservation.Engine
    Core.Hashing
    Core.Schema
    
    -- Execution directory
    Execution
    Execution.ContentAddressableExecutor
    Execution.DistributedLog
    Execution.EffectAdapterGenerator
    Execution.EffectExecutor
    Execution.EffectInterpreter
    Execution.EffectLogger
    Execution.Events
    Execution.ExecutionLog
    Execution.LocalMultiProcess
    Execution.LogStore
    Execution.PreconditionEvaluator
    Execution.ResourceLedger
    
    -- Programs directory
    Programs
    Programs.AccountProgram
    Programs.Preconditions
    Programs.Program
    Programs.ProgramDefinition
    Programs.ProgramEffect
    Programs.ProgramState
    Programs.ProgramTypes
    Programs.Scenario
    Programs.Types
    
    -- Proofs directory
    Proofs
    Proofs.SecurityVerifier
    Proofs.TimelineProof
    Proofs.ZKProof
    
    -- Simulation directory
    Simulation
    Simulation.Controller
    Simulation.Messaging
    Simulation.Scenario
    Simulation.Scenarios

executable time-bandits
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , bytestring
    , text
    , time-bandits
    , utf8-string

executable deployment-app
  import:         shared
  main-is:        DeploymentApp.hs
  hs-source-dirs: app
  build-depends:
    , time-bandits

executable fact-observation-cli
  import:          shared
  hs-source-dirs:  app
  main-is:         FactObservationCLI.hs
  build-depends:
    , time-bandits
    , optparse-applicative
    , directory
    , filepath
    , aeson
    , aeson-pretty
    , bytestring
    , text
    , containers
    , time

executable content-addressable-tool
  import:         shared
  main-is:        ContentAddressableTool.hs
  hs-source-dirs: app
  build-depends:
    , time-bandits
    , bytestring
    , text
    , directory
    , filepath

test-suite time-bandits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Core.FactObservation.RulesSpec
                     , Core.FactObservation.TOMLParserSpec
                     , Core.FactObservation.EngineSpec
                     , Core.FactObservation.IntegrationSpec
                     , Core.FactObservation.CLISpec
                     , Core.ContentAddressableTest
                     , Core.ContentAddressableSystemTest
                     , TestReport
                     , HspecReporter
                     , TastyReporter
  build-depends:       base
                     , time-bandits
                     , hspec >= 2.10.0
                     , hspec-core >= 2.10.0
                     , tasty >= 1.4
                     , tasty-hunit
                     , temporary
                     , directory
                     , filepath
                     , process
                     , containers
                     , text
                     , aeson
                     , time
                     , bytestring
                     , data-default
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable generate-test-report
  import:          shared
  hs-source-dirs:  test
  main-is:         GenerateTestReport.hs
  other-modules:   Core.FactObservation.RulesSpec
                 , Core.FactObservation.TOMLParserSpec
                 , Core.FactObservation.EngineSpec
                 , Core.FactObservation.IntegrationSpec
                 , Core.FactObservation.CLISpec
                 , Core.ContentAddressableTest
                 , Core.ContentAddressableSystemTest
                 , TestReport
                 , HspecReporter
                 , TastyReporter
  build-depends:   base
                 , time-bandits
                 , hspec >= 2.10.0
                 , hspec-core >= 2.10.0
                 , tasty >= 1.4
                 , tasty-hunit
                 , temporary
                 , directory
                 , filepath
                 , process
                 , containers
                 , text
                 , aeson
                 , time
                 , bytestring
                 , data-default
                 , QuickCheck
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable generate-minimal-report
  import:          shared
  hs-source-dirs:  test
  main-is:         GenerateMinimalReport.hs
  build-depends:   base
                 , time-bandits
                 , directory
                 , filepath
                 , process
                 , text
                 , time
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
