cabal-version:      2.4
name:               time-bandits
version:            0.1.0.0
license:            Apache-2.0
copyright:          2025 Sam Hart
author:             Sam Hart
maintainer:         sam@hxrts.com
category:           Development
synopsis:           Distributed time travel
description:
  A Haskell library for distributed time travel.

extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/timewave-computer/time-bandits.git

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    -- , aeson-schema  -- Commented out due to dependency issues with regex-pcre and duplicate instances
    , async
    , base               >=4.18    && <5
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , cereal
    , containers
    , cryptonite
    , deepseq
    , haskeline
    , hie-bios
    , directory
    , extra
    , filepath
    , hashable
    , http-api-data
    , lens
    , memory
    , mtl                >= 2.2.2
    , network
    , polysemy           >= 1.9.1
    , polysemy-plugin
    , pretty-simple
    , process
    , random
    , relude             >= 1.2.0.0
    , scientific
    , serialise
    , stm
    , store
    , text
    , text-replace
    , time
    , tomland
    , transformers
    , unordered-containers
    , uuid
    , vector
    , megaparsec          >= 9.0
    , prettyprinter       >= 1.7
    , hex
    , temporary           >= 1.3
    , template-haskell    >= 2.20.0.0

  default-language:   GHC2021

-- Main library that contains all modules
library
  import:          shared
  hs-source-dirs:  src
  
  -- All modules explicitly listed by directory structure
  exposed-modules:
    TimeBandits
    
    -- TimeBandits Core modules
    TimeBandits.Core.Common.SharedTypes
    TimeBandits.Core.Common.Types
    TimeBandits.Core.Common.Utils
    TimeBandits.Core.Common.ModuleLayout
    TimeBandits.Core.Common.Extensions
    TimeBandits.Core.Common.ModuleTemplate
    TimeBandits.Core.Common.Serialize
    
    -- ContentAddress modules
    TimeBandits.Core.ContentAddress.Types
    TimeBandits.Core.ContentAddress.Hash
    TimeBandits.Core.ContentAddress.Repository
    TimeBandits.Core.ContentAddress.Util
    TimeBandits.Core.ContentAddress.ModuleLayout
    TimeBandits.Common.ContentAddress
    
    -- Resource Management modules
    TimeBandits.Core.Resource
    TimeBandits.Core.Resource.Types
    TimeBandits.Core.Resource.Operations
    TimeBandits.Core.Resource.Ledger
    
    -- TimeMap modules
    TimeBandits.Core.TimeMap
    TimeBandits.Core.TimeMap.Types
    TimeBandits.Core.TimeMap.Operations
    
    -- ID and Type modules
    TimeBandits.Core.TimelineId
    TimeBandits.Core.ResourceId
    TimeBandits.Core.ProgramId
    TimeBandits.Core.Error
    TimeBandits.Core.Error.Types
    TimeBandits.Core.Effect
    TimeBandits.Core.Timeline
    TimeBandits.Core.Types
    TimeBandits.Core.Timeline.Descriptor
    TimeBandits.Core.Schema
    TimeBandits.Core.Log
    TimeBandits.Core.Log.StandardLog
    
    -- TEL modules
    TimeBandits.Core.TEL
    TimeBandits.Core.TEL.AST
    TimeBandits.Core.TEL.Concurrency
    TimeBandits.Core.TEL.Parser
    TimeBandits.Core.TEL.PrettyPrinter
    TimeBandits.Core.TEL.TypeChecker
    TimeBandits.Core.TEL.ContentAddressable
    TimeBandits.Core.TEL.Interpreter
    TimeBandits.Core.TEL.REPL
    
    -- Concurrency modules
    TimeBandits.Core.Concurrency.Types
    TimeBandits.Core.Concurrency.Combinators
    TimeBandits.Core.Concurrency.Distributed
    TimeBandits.Core.Concurrency.LockManager
    TimeBandits.Core.Concurrency.ResourceLock
    TimeBandits.Core.Concurrency.EffectLog
    
    -- FactObservation modules
    TimeBandits.Core.FactObservation
    TimeBandits.Core.FactObservation.Engine
    TimeBandits.Core.FactObservation.Rules
    TimeBandits.Core.FactObservation.Schema
    TimeBandits.Core.FactObservation.TOMLParser
    
    -- Actor modules
    TimeBandits.Actors.ActorId
    
    -- Program modules
    TimeBandits.Programs.AccountProgram
    
    -- Execution modules
    TimeBandits.Execution.ExecutionLog

executable time-bandits
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , bytestring
    , text
    , time-bandits
    , utf8-string

executable deployment-app
  import:         shared
  main-is:        DeploymentApp.hs
  hs-source-dirs: app
  build-depends:
    , bytestring
    , text
    , time-bandits
    , utf8-string

test-suite time-bandits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time-bandits
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , mtl
                     , pretty-simple
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , scientific
                     , scientific-notation
                     , temporary
                     , QuickCheck
                     , quickcheck-instances
                     , process
                     , uuid
  other-modules:       TimeBandits.Core.TEL.CompositeEffectTest
                     , TimeBandits.Core.TEL.ToEffectTest
                     , TimeBandits.Core.TEL.ConcurrentEffectsSpec
                     , TimeBandits.Core.FactObservation.BasicRulesSpec
                     , TimeBandits.Core.FactObservation.BasicEngineSpec
                     , TimeBandits.Core.ContentAddress.SystemTest
                     , TimeBandits.Core.ContentAddress.TypesSpec
                     , TimeBandits.Core.ContentAddress.HashSpec
                     , TimeBandits.Core.ContentAddress.RepositorySpec
                     , TimeBandits.Core.ContentAddress.SystemSpec
                     , TimeBandits.Core.Common.SerializeTest

executable generate-test-report
  import:          shared
  hs-source-dirs:  test
  main-is:         GenerateTestReport.hs
  other-modules:   
                  -- Basic Fact Observation tests (working)
                    TimeBandits.Core.FactObservation.BasicRulesSpec
                  , TimeBandits.Core.FactObservation.BasicEngineSpec
                  -- Content Address module tests (working)
                  , TimeBandits.Core.ContentAddress.TypesSpec
                  , TimeBandits.Core.ContentAddress.HashSpec
                  , TimeBandits.Core.ContentAddress.RepositorySpec
                  , TimeBandits.Core.ContentAddress.SystemSpec
                  -- TEL tests
                  , TimeBandits.Core.TEL.ToEffectTest
                  , TimeBandits.Core.TEL.CompositeEffectTest
                  -- Concurrency tests
                  , TimeBandits.ConcurrentEffectsSpec
  build-depends:   base
                 , time-bandits
                 , hspec >= 2.10.0
                 , hspec-core >= 2.10.0
                 , hspec-expectations
                 , tasty >= 1.4
                 , tasty-hunit
                 , temporary
                 , containers
                 , mtl
                 , text
                 , filepath
                 , directory
                 , QuickCheck
                 , async
                 , bytestring
                 , cereal

executable test-toeffect-standalone
  import:           shared
  hs-source-dirs:   test
  main-is:          RunToEffectTest.hs
  build-depends:    time-bandits
                  , hspec
                  , hspec-expectations
                  , QuickCheck
                  , bytestring
                  , text
                  , containers
                  , cereal
  other-modules:    TimeBandits.Core.TEL.ToEffectTest 

executable test-composite-effect-standalone
  import:           shared
  hs-source-dirs:   test
  main-is:          RunCompositeEffectTest.hs
  build-depends:    time-bandits
                  , hspec
                  , hspec-expectations
                  , QuickCheck
                  , bytestring
                  , text
                  , containers
                  , cereal
  other-modules:    TimeBandits.Core.TEL.CompositeEffectTest 

executable test-concurrent-standalone
  import:           shared
  hs-source-dirs:   test
  main-is:          RunConcurrentEffectsTest.hs
  build-depends:    time-bandits
                  , hspec
                  , QuickCheck
                  , hspec-expectations
                  , bytestring
                  , text
                  , containers
                  , cereal
                  , async
  other-modules:    TimeBandits.ConcurrentEffectsSpec

executable test-all-standalone
  hs-source-dirs:   test
  main-is:          Core/TEL/RunAllTests.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:    base
                  , time-bandits
                  , hspec >= 2.10.0
                  , hspec-expectations
                  , aeson
                  , containers
                  , QuickCheck
                  , mtl
                  , text
                  , temporary
                  , filepath
                  , directory
                  , bytestring
                  , cereal
                  , async
  other-modules:    TimeBandits.Core.TEL.CompositeEffectTest
                  , TimeBandits.Core.TEL.ToEffectTest
                  , TimeBandits.ConcurrentEffectsSpec
                  , TimeBandits.Core.FactObservation.BasicRulesSpec
                  , TimeBandits.Core.FactObservation.BasicEngineSpec
  default-language: Haskell2010

executable test-rules-standalone
  hs-source-dirs:   test
  main-is:          RunRulesTest.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:    base
                  , time-bandits
                  , hspec >= 2.10.0
                  , aeson
                  , containers
                  , QuickCheck
                  , mtl
                  , text
                  , temporary
                  , filepath
                  , directory
  other-modules:    TimeBandits.Core.FactObservation.BasicRulesSpec
  default-language: Haskell2010 