cabal-version:      2.4
name:               cli-deployment
version:            0.1.0.0
license:            Apache-2.0
author:             Test User
maintainer:         test@example.com
category:           Test

executable cli-deployment
  main-is:          Main.hs
  other-modules:    CLI.Deployment
  hs-source-dirs:   ., CLI
  build-depends:    base >= 4.16 && < 5,
                    cereal,
                    text
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    OverloadedStrings 