cabal-version:      2.4
name:               fact-observation
version:            0.1.0.0
synopsis:           Standalone test for Fact Observation
description:        A standalone test for the Fact Observation component of Time Bandits
author:             Time Bandits
maintainer:         time-bandits@example.com
category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

executable fact-observation
    import:           warnings
    main-is:          Main.hs
    other-modules:    FactObservation
    build-depends:    base >=4.14 && <5
                    , aeson
                    , aeson-pretty
                    , bytestring
                    , containers
                    , filepath
                    , directory
                    , text
                    , tomland
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010 